# s100calc

./: LICENSE.md  README.md  pyproject.toml
s100calc/: __init__.py
s100calc/esr/: __init__.py  abc.py  protocol.py  registry.py
scripts/: export_esr.py  export_oracle.py
tests/esr/esr_2093/: esr_2093.csv  implementation.py  oracle.csv
